// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updates positions when a block is sized 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "height": 20,
          "id": "0",
          "index": 0,
          "name": "Block 1",
          "vx": -0.001686843990347475,
          "vy": 0.000001061218830147864,
          "width": 10,
          "x": -18.09172907777812,
          "y": -0.06797373885854369,
        },
        Object {
          "height": 40,
          "id": "5",
          "index": 1,
          "name": "Block 2",
          "vx": -0.0016867883899760352,
          "vy": -0.00001373639393073679,
          "width": 30,
          "x": 18.088355445397795,
          "y": 0.0679610636834431,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;

exports[`updates positions when a link is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "height": 20,
          "id": "0",
          "index": 0,
          "name": "Block 1",
          "vx": -0.00047977788076582743,
          "vy": 0.02095490741090007,
          "width": 10,
          "x": 18.890825970571658,
          "y": 8.719921435395106,
        },
        Object {
          "height": 40,
          "id": "5",
          "index": 1,
          "name": "Block 2",
          "vx": 0.0004955404621933907,
          "vy": 0.023257703437983553,
          "width": 30,
          "x": -14.722856280224653,
          "y": 27.242676474621685,
        },
        Object {
          "height": 60,
          "id": "10",
          "index": 2,
          "name": "Block 3",
          "vx": -0.0026421818975606816,
          "vy": 0.021874791941292118,
          "width": 50,
          "x": -4.1705961096631405,
          "y": -35.896510507226616,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;
